<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PilihMaps">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".PilihMaps" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_maps"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:textStyle="italic"
            android:paddingLeft="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_location"
                android:id="@+id/btnGetLocation"
                android:background="@drawable/round_blue"
                android:textColor="@color/putih"
                android:layout_margin="10dp"
                android:padding="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat_lengkap"
                android:autofillHints="@string/alamat"
                android:inputType="text"
                android:id="@+id/etAlamat"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/btnConfirm"
        android:background="@color/laundry"
        android:textColor="@color/putih"/>

</LinearLayout>